# OCRanalysis

./: .gitignore  README.md
OCREvaluator/: LLM.py  README.md  batch_process.py  file_processor.py  main.py  pyproject.toml  results_manager.py  sample.env  setup.py
TestsPart1/: README.md  llamacpp_start_command.txt  pyproject.toml  sample.env
TestsPart1/src/: main.py
TestsPart1/src/ocrMethods/: llamacppRunner.py  llmRunner.py  paddleocrRunner.py  tesseractRunner.py
TestsPart2/: README.md  main.py  pyproject.toml
