[project]
name = "thesis3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "easyocr==1.7.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.uv.sources]
torch = { index = "torch" }
torchvision = { index = "torch" }

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
